--- a/requirements_bot.txt
+++ b/requirements_bot.txt
@@ -1,11 +1,10 @@
 aiogram==3.13.1
 fastapi==0.115.0
-pydantic==2.9.2
 uvicorn==0.31.0
 jinja2==3.1.4
-pydantic_settings==2.5.2
 sqlmodel
 zulip
 requests
 
-pytest
+#pydantic==2.9.2
+#pydantic_settings==2.5.2
