--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     labels: # new
       - "traefik.enable=true"
       - "traefik.http.routers.bot.entrypoints=https"
-      - "traefik.http.routers.bot.rule=Host(`old.kik-soft.ru`)"
+      - "traefik.http.routers.bot.rule=Host(`bot.kik-soft.ru`)"
       - "traefik.http.routers.bot.tls=true"
       - "traefik.http.routers.bot.tls.certresolver=letsEncrypt"
       - "traefik.http.services.bot-service.loadbalancer.server.port=80"
@@ -28,6 +28,27 @@ services:
       - 80
     labels:
       - "traefik.enable=true"
+  db:
+    image: postgres:16-alpine
+    volumes:
+      - postgres_prod:/var/lib/postgresql/data/
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=ermolalex
+      - POSTGRES_PASSWORD=Valio78952
+      - POSTGRES_DB=tg_chat
+    healthcheck:
+      test: [ "CMD-SHELL", "sh -c 'pg_isready -U ermolalex -d tg_chat'" ]
+      #  ["CMD-SHELL", "pg_isready --username=ermolalex"]
+
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_prod:
+
 networks:
   traefik:
     name: traefik
